cmake_minimum_required(VERSION 3.0)
project(ly_server)
# set(CMAKE_C_COMPILER /usr/local/gcc-11.3/bin/gcc)
# set(CMAKE_CXX_COMPILER /usr/local/gcc-11.3/bin/g++)

include (${PROJECT_SOURCE_DIR}/cmake/utils.cmake)
include_directories(${PROJECT_SOURCE_DIR}/configuration)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/db/base)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/db/datahandle)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/ThreadPool)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/lib/aip)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/test)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/FTP)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/network)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/reactor)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/Tcpserver)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/http)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/tool)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/signal)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/http)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/FileWR)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/fiber)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/include/hook)
include_directories(${PROJECT_SOURCE_DIR}/other/Path_Planning)
include_directories(${PROJECT_SOURCE_DIR}/other/RF)
include_directories(${PROJECT_SOURCE_DIR}/other/py)
include_directories(${PROJECT_SOURCE_DIR}/example)
include_directories(${PROJECT_SOURCE_DIR}/lyserver/streams)

add_subdirectory(${PROJECT_SOURCE_DIR}/lyserver/src)# 指定源文件目录和可执行文件的存放位置${PROJECT_SOURCE_DIR}/bin/server